fixed overflow issue

--- a/src/styles/center-styles.scss
+++ b/src/styles/center-styles.scss
@@ -17,7 +17,6 @@
   text-align: center;
   transition: 0.5s ease;
   margin: 30px;
-  overflow: hidden;
 }
 .card-image {
   grid-area: image;
@@ -30,14 +29,13 @@
 }
 .card-image {
   grid-area: image;
-  //   background: url("img1.jpg");
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
 }
 .card-text {
   grid-area: text;
-  padding: 20px;
+  margin: 25px;
 }
 .card-text .date {
   color: rgb(255, 7, 110);
